--- a/index.html
+++ b/index.html
@@ -50,7 +50,29 @@
 				</div>
 			</article>
 			<article class="box4">
-				<div id="rectangle"></div>
+				<div id="rectangle">
+					<h2>LONDON 2012</h2>
+					<div class="unterueberschrift">29 august - 09 september</div>
+					<table class="Tabelle1">
+						<colgroup>
+							<col width="275px">
+						</colgroup>
+						<tr><td>Countries</td><td>164</td></tr>
+						<tr><td>Athletes</td><td>4,237</td></tr>
+						<tr><td style="padding-left: 35px;">Men</td><td style="padding-left: 35px;">2,736</td></tr>
+						<tr><td style="padding-left: 35px;">Women</td><td style="padding-left: 35px;">1,501</td></tr>
+						<tr><td>World Records</td><td>251</td></tr>
+						<tr><td>Paralympic Games Records</td><td>314</td></tr>
+						<tr><td>Medal Events</td><td>503</td></tr>
+						<tr><td>Sports</td><td>20</td></tr>
+						<tr><td>Spectators</td><td>2.7 million</td></tr>
+						<tr><td>Cumulated TV audience</td><td>3.8 billion</td></tr>
+						<tr><td>Volunteers</td><td>70.000</td></tr>
+					</table>
+				</div>
+			</article>
+			<article class="box5">
+				<div class="fliesstext">In his closing speech IPC President Sir Philip Craven described London 2012 as ‘the great- <br>est Paralympic Games ever’ and with record crowds, numbers of broadcasters and athletes and countries taking part combined with record breaking performances from athletes and un- <br>precedented media coverage it was easy to see why. The Paralympics had a positive impact on the way people with an impairment are viewed by the public; the Paralympic Games is about ability, not disability – and are about what people can do, not what they can’t do.</div>
 			</article>
 		</div>
 	</body>
