spalten mit float und nicht position relative

--- a/index.html
+++ b/index.html
@@ -18,35 +18,50 @@
 						<li><a href="venue.htm">VENUE</a></li>
 						<li><a href="sports.htm">SPORTS</a></li>
 						<li><a href="athletes.htm">ATHLETES</a></li>
+						<!-- Am Ende eines Floats immer ein Clearing machen -->
+						<li class="clear"></li>
 					</ul>
 				</div>
 				<hr class="Strich2">
 			</article>
 			<article class="box3">
 				<div id="years">
-					<ul>
-						<li class="ersteSpalte"><a href="1960.htm">1960</a></li>
-						<li class="ersteSpalte"><a href="1964.htm">1964</a></li>
-						<li class="ersteSpalte"><a href="1968.htm">1968</a></li>
-						<li class="zweiteSpalte"><a href="1972.htm">1972</a></li>
-						<li class="zweiteSpalte"><a href="1978.htm">1978</a></li>
-						<li class="zweiteSpalte"><a href="1980.htm">1980</a></li>
-						<li class="dritteSpalte"><a href="1984.htm">1984</a></li>
-						<li class="dritteSpalte"><a href="1988.htm">1988</a></li>
-						<li class="dritteSpalte"><a href="1992.htm">1992</a></li>
-						<li class="vierteSpalte"><a href="1994.htm">1994</a></li>
-						<li class="vierteSpalte"><a href="1996.htm">1996</a></li>
-						<li class="vierteSpalte"><a href="1998.htm">1998</a></li>
-						<li class="fuenfteSpalte"><a href="2000.htm">2000</a></li>
-						<li class="fuenfteSpalte"><a href="2002.htm">2002</a></li>
-						<li class="fuenfteSpalte"><a href="2004.htm">2004</a></li>
-						<li class="sechsteSpalte"><a href="2006.htm">2006</a></li>
-						<li class="sechsteSpalte"><a href="2008.htm">2008</a></li>
-						<li class="sechsteSpalte"><a href="2010.htm">2010</a></li>
-						<li class="siebteSpalte"><a href="2012.htm">2012</a></li>
-						<li class="siebteSpalte"><a href="2014.htm">2014</a></li>
-						<li class="siebteSpalte"><a href="2016.htm">2016</a></li>
+					<ul class="ersteSpalte">
+						<li class=""><a href="1960.htm">1960</a></li>
+						<li class=""><a href="1964.htm">1964</a></li>
+						<li class=""><a href="1968.htm">1968</a></li>
 					</ul>
+					<ul class="zweiteSpalte">
+						<li class=""><a href="1972.htm">1972</a></li>
+						<li class=""><a href="1978.htm">1978</a></li>
+						<li class=""><a href="1980.htm">1980</a></li>
+					</ul>
+					<ul class="dritteSpalte">
+						<li class=""><a href="1984.htm">1984</a></li>
+						<li class=""><a href="1988.htm">1988</a></li>
+						<li class=""><a href="1992.htm">1992</a></li>
+					</ul>
+					<ul class="vierteSpalte">
+						<li class=""><a href="1994.htm">1994</a></li>
+						<li class=""><a href="1996.htm">1996</a></li>
+						<li class=""><a href="1998.htm">1998</a></li>
+					</ul>
+					<ul class="fuenfteSpalte">
+						<li class=""><a href="2000.htm">2000</a></li>
+						<li class=""><a href="2002.htm">2002</a></li>
+						<li class=""><a href="2004.htm">2004</a></li>
+					</ul>
+					<ul class="sechsteSpalte">
+						<li class=""><a href="2006.htm">2006</a></li>
+						<li class=""><a href="2008.htm">2008</a></li>
+						<li class=""><a href="2010.htm">2010</a></li>
+					</ul>
+					<ul class="siebteSpalte">
+						<li class=""><a href="2012.htm">2012</a></li>
+						<li class=""><a href="2014.htm">2014</a></li>
+						<li class=""><a href="2016.htm">2016</a></li>
+					</ul>
+					<div class="clear"></div>
 				</div>
 			</article>
 			<article class="box4">
